Ensure border-radius and variants are universally applied.
Monotone-Parent: 0d63786149e1974d38dc787febb4d19ef74adaf9
Monotone-Revision: 62e6e72c45185dc4e610c1e88dfd182c1a75b82b

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T14:07:34
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -147,14 +147,16 @@ div.news li {
 }
 
 div.confignav {
-     padding: 0 15px;
-     margin: 0 0px 25px 0;
+     padding: 15px 10px !important;
+     margin: 0 0 25px 0;
      background: #004 url('images/darkbluebg.png');
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #99f;
-     font-size: 8pt !important;
-     line-spacing: 150% !important;
+     font-size: 10pt !important;
+     font-weight: bold !important;
+     line-height: 160% !important;
 }
 
 div.configure {
@@ -162,6 +164,8 @@ div.configure {
      margin: 10px 0px;
      background: #005;
      -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #99f;
 }
 
@@ -170,6 +174,7 @@ div.messages {
      margin: 10px 0 20px 0;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #99f;
      background: #008 url('images/lightbluetile.png');
 }
@@ -368,7 +373,6 @@ button:active {
      border-bottom: 1px solid #eeeeff;
      padding: 5px 0px 5px 0px;
      margin: 0px 0px 10px 0px;
-     -moz-border-radius: 4px;
 }
 
 .langbox {
