--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -55,13 +55,11 @@ div.toolbar a:link {
 }
 
 div.toolbar a:visited {
-     line-height: 250%;
      background: #ddf;
 }
 
 div.toolbar a:hover{
      border: 1px solid #eeeeff;
-     line-height: 250%;
      background: #003;
      color: #f60;
 }
@@ -93,6 +91,7 @@ div.routersummary {
      clear: left;/* fixes a bug in Opera */
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
+     border-radius: 4px;
      float: left;
      -moz-box-shadow: inset 0px 0px 16px 1px #eef;
 }
@@ -153,19 +152,25 @@ div.news li {
 }
 
 div.confignav {
-     padding: 0 15px;
-     margin: 0 0px 25px 0;
-     background: #ddddff url('images/tabletile.png');
+     padding: 15px 10px !important;
+     margin: 0 0 25px 0;
+     background: #ddf url('images/tabletile.png');
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #000022;
+     font-size: 10pt !important;
+     font-weight: bold !important;
+     line-height: 160% !important;
 }
 
 div.configure {
-     padding: 1em;
+     padding: 15px 10px !important;
      margin: 10px 0px 25px 0;
      background: #ddf;
      -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #000022;
 }
 
@@ -174,6 +179,8 @@ div.messages {
      margin: 10px 0 20px 0;
      background: #ddf;
      -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #000033;
      background: #008 url('images/lightbluetile.png');
 }
@@ -183,6 +190,7 @@ div.messages {
      margin: 10px 0 20px 0;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #99f;
      background: #008 url('images/lightbluetile.png');
 }
