Ensure border-radius and variants employed consistently in default.css
Monotone-Parent: 62e6e72c45185dc4e610c1e88dfd182c1a75b82b
Monotone-Revision: 8c51d9c067efe4f6267572dda9a32a0a647f0150

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T14:17:37
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/default.css
+++ b/installer/resources/themes/console/light/default.css
@@ -150,6 +150,8 @@ hr {
      text-align: center;
      white-space: nowrap;
      -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      margin-top: 8px;
 }
 
@@ -176,7 +178,9 @@ hr {
      font-size: 0.8em;
      background-color: #fff;
      background: url(images/lightbluetile.png);
-     -moz-border-radius: 4px 4px 4px 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #002;
      padding: 10px 20px;
 }
@@ -225,4 +229,6 @@ hr {
 
 .header {
      -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
 }
