--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -47,9 +47,9 @@ h4 {
      text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.9);
      letter-spacing: 0.08em;
      -moz-box-shadow: inset 0px 0px 4px 0px #009;
-     border-radius: 4px;
      -moz-border-radius: 4px;
-     -webkit-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
 }
 
 a {
@@ -175,6 +175,8 @@ hr {
      text-align: center;
      white-space: nowrap;
      -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      margin-top: 8px;
      background: url(images/tabletitlelight.png);
      background-repeat: x;
@@ -208,7 +210,9 @@ hr {
      color: white;
      background-color: #002;
      background: url(images/darkbluebg.png);
-     -moz-border-radius: 4px 4px 4px 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 1px solid #99f;
      padding: 10px 20px;
 }
@@ -257,7 +261,9 @@ hr {
 }
 
 .header {
-     -moz-border-radius: 4px 4px 4px 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
      border: 0;
 }
 
