--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -5,7 +5,7 @@ body {
      font-family: "Lucida Sans Unicode", Verdana, Helvetica, sans-serif;
      background-color: #001;
      color: #000000;
-     font-size: 11pt;
+     font-size: 9pt;
 /* we've avoided Tantek Hacks so far,
     ** but we can't avoid using the non-w3c method of 
     ** box rendering. (and therefore one of mozilla's
@@ -40,9 +40,7 @@ h4 {
      width: 100%;
      border: 1px solid #99f;
      margin: 5px 0 15px 0;
-     background: url(images/tabletitledark.png);
-     background-repeat: x;
-     background-color: #002;
+     background: #004 url(images/tabletitledark.png) repeat-x;
      text-transform: uppercase;
      text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.9);
      letter-spacing: 0.08em;
@@ -64,7 +62,7 @@ textarea, input, select, button, a {
      font-family: "Lucida Sans Unicode", Verdana, Helvetica, sans-serif;
      -moz-box-sizing: border-box;
      box-sizing: border-box;
-     font-size: 1.0em;
+     font-size: 9pt;
      float: left;
 }
 
@@ -79,28 +77,6 @@ textarea {
 br {
      clear: left;
 }
-/*
-div.statusNotRunning {
-    float : left;
-    width : 82px;
-    height : 24px;
-    color : #dd0000;
-        font-weight: bold;
-}
-div.statusRunning {
-    float : left;
-    width : 82px;
-    height : 24px;
-      color : #00dd00;
-        font-weight: bold;  
-}
-div.statusStarting {
-    float : left;
-    width : 82px;
-    height : 24px;
-      color : #339933;
-}
-*/
 
 div.statusNotRunning {
      float: left;
@@ -153,23 +129,23 @@ hr {
 
 .freetext {
      width: 150px;
-/*    height : 22px; */
+     height : 22px; 
      border: 1px solid #9999ff;
      padding: 2px;
      margin: 4px 0 2px 4px;
      background-color: #002;
-     font-family: "Lucida Console", Courier, mono;
-     font-weight: bold;
+     font: bold 9pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
 }
 
 .control {
-     margin: 0 2px 0 2px;
-     padding: 0 0 2px 0;
+     margin: 2px 2px;
+     padding: 2px 0;
      overflow: hidden;
-     height: 20px;
      min-width: 60px;
+     height: 22px;
+     font-size: 9pt;
      font-weight: bold;
-     background-color: #bbbbff;
+     background-color: #b4c8ff;
      color: black;
      border: 1px outset #ddddc0;
      text-align: center;
@@ -178,8 +154,8 @@ hr {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      margin-top: 8px;
-     background: url(images/tabletitlelight.png);
-     background-repeat: x;
+     background: url(images/tabletitlelight.png) repeat: x;
+     vertical-align: middle;
 }
 
 .control:link {
@@ -206,7 +182,7 @@ hr {
      margin: 16px auto 16px auto;
      overflow: hidden;
      text-align: left;
-     font-size: 0.8em;
+     font-size: 9pt;
      color: white;
      background-color: #002;
      background: url(images/darkbluebg.png);
@@ -290,7 +266,9 @@ input {
      font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
      font-weight: bold;
      border: 1px solid #99f;
+/*
      padding: 0px 2px 1px 2px;
+*/
      text-decoration: none;
 }
 
@@ -301,16 +279,18 @@ input hover {
      font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
      font-weight: bold;
      border: 1px solid #99f;
-     padding: 0px 2px 1px 2px;
+     padding: 2px;
      text-decoration: none;
 }
 
 select {
      background-color: #001;
      color: #eef;
-     margin: 8px 2px 0 2px;
+     margin: 6px 2px 0 2px;
      font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
      border: 1px solid #99f;
+     padding: 2px 2px 2px 4px;
+     height: 24px;
 }
 
 form {}
