Fix button hover colors on Opera/webkit.
Monotone-Parent: dee0b23ba87c00083ad4518d735f7355f5c2cad0
Monotone-Revision: 85f6139fdf97a8859942e2af6f6a1d91778219e7

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T16:02:29
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -165,12 +165,13 @@ hr {
 .control:hover {
      border: 1px solid #eeeeff;
      background-color: #003;
-     color: #ff6600;
-     background: none;
+     color: #ff6600 !important;
 }
 
 .control:active {
      border: 2px inset;
+     background-color: #f60;
+     color: #fff !important;
 }
 
 .control:visited {
