Apply some css love to the light theme I2P tunnel dropdowns. Insert flags into Chinese readme.
Monotone-Parent: 85f6139fdf97a8859942e2af6f6a1d91778219e7
Monotone-Revision: b2d6ee283b2d2ce0c13625e2a30add548ab3f845

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T17:16:32
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/default.css
+++ b/installer/resources/themes/console/light/default.css
@@ -229,3 +229,13 @@ hr {
      -khtml-border-radius: 4px;
      border-radius: 4px;
 }
+
+select {
+     background-color: #fff;
+     color: #001;
+     margin: 6px 2px 0 2px;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     border: 1px solid #99f;
+     padding: 2px;
+     height: 22px;
+}
