Moderate layout changes to news.xml and initialNews.xml, customary css tweaks, and zzz's fix for the Chinese readme issues.
Monotone-Parent: a2c34ebb32b25c1a1bcdb3eae71d6b55fcbaf32d
Monotone-Revision: 73ab31c9b1073b981c6c00e86cdd74f5d96b57e3

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T18:44:24
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -139,7 +139,6 @@ div.news {
 
 div.news li {
      text-align: justify;
-     font-weight: bold;
      list-style: url('images/info_dark.png');
      margin: 0 10px 0 30px;
      padding: 5px;
@@ -347,6 +346,14 @@ h3 {
      padding: 5px 0;
 }
 
+h4 {
+     border-bottom: 1px;
+     border-bottom-style: solid;
+     border-bottom-color: #99f;
+     padding: 0 0 10px 0;
+     margin: 5px 0 10px 0;
+     font-size: 11pt;
+}
 button {
      border: 1px outset #ddddc0;
      padding: 1px 3px;
