Minor theme tweaks.
Monotone-Parent: 73ab31c9b1073b981c6c00e86cdd74f5d96b57e3
Monotone-Revision: 41423b391bf4327fe9df3a99934fafd2e6175f7b

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T18:56:56
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -360,6 +360,15 @@ h3 {
      background: #eef;
 }
 
+h4 {
+     border-bottom: 1px;
+     border-bottom-style: solid;
+     border-bottom-color: #001;
+     padding: 0 0 10px 0;
+     margin: 5px 0 10px 0;
+     font-size: 11pt;
+}
+
 button {
      border: 1px outset #ddddc0;
      padding: 1px 3px;
