Dark I2PTunnels cross-browser css tweaks.
Monotone-Parent: 8c39e13235ae37d7897fed5b2a6f4fe3ab5ebf0a
Monotone-Revision: 7eaff965c0da7723e5d67d87929adad106f6a61f

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-17T04:18:48
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -138,11 +138,11 @@ hr {
 }
 
 .control {
-     margin: 2px 2px;
+     margin: 6px 0 0 2px !important;
      padding: 2px 0;
      overflow: hidden;
      min-width: 60px;
-     height: 22px;
+     max-height: 24px;
      font-size: 9pt;
      font-weight: bold;
      background-color: #b4c8ff;
@@ -291,7 +291,7 @@ select {
      font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
      border: 1px solid #99f;
      padding: 2px 2px 2px 4px;
-     height: 24px;
+     max-height: 24px;
 }
 
 form {}
