Restore accidentally reverted <h3> styling. Apply some polish to <code>configtunnels.jsp</code>.
Monotone-Parent: 5cc467cab9a320faaaa2054bb69769ac05c74dd8
Monotone-Revision: 30b6e33e95c88e0497813a54f82a2abaca138f6e

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-17T13:40:34
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -166,6 +166,7 @@ div.configure {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      border: 1px solid #99f;
+     background: url(images/darkbluebg.png);
 }
 
 div.messages {
@@ -340,10 +341,15 @@ h2 a:hover {
 }
 
 h3 {
-     border-bottom: 1px;
-     border-bottom-style: solid;
-     border-bottom-color: #99f;
-     padding: 5px 0;
+     border: 1px solid #99f;
+     border-left: 5px solid #99f;
+     padding: 3px 5px 3px 5px;
+     margin: 20px 0 15px 0;
+     border-radius: 0 4px 4px 0;
+     -moz-border-radius: 0 4px 4px 0;
+     -khtml-border-radius: 0 4px 4px 0;
+     background: #004;
+     background: url(images/darkbluebg.png);
 }
 
 h4 {
