More work on the config pages.
Monotone-Parent: eafd5e7a66f00e50676defd1c6fb3f00261e9b30
Monotone-Revision: dea62f5479c0cfbb6bde3b6de73cf71b38e22304

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-17T17:30:11
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -166,7 +166,7 @@ div.confignav {
 div.configure {
      padding: 15px 10px !important;
      margin: 10px 0px 25px 0;
-     background: #ddf;
+     background: #ddf url('images/lightbluetile.png');
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      border-radius: 4px;
