--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -153,7 +153,7 @@ div.news li {
 div.confignav {
      padding: 15px 10px !important;
      margin: 0 0 25px 0;
-     background: #ddf url('images/tabletile.png');
+     background: #ddf url('images/lightbluetile.png');
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      border-radius: 4px;
