--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -164,7 +164,7 @@ div.confignav {
 }
 
 div.configure {
-     padding: 15px 10px !important;
+     padding: 0 15px !important;
      margin: 10px 0px 25px 0;
      background: #ddf url('images/lightbluetile.png');
      -moz-border-radius: 4px;
@@ -174,7 +174,7 @@ div.configure {
 }
 
 div.messages {
-     padding: 0 10px;
+     padding: 10px;
      margin: 10px 0 20px 0;
      background: #ddf;
      -moz-border-radius: 4px;
@@ -182,18 +182,9 @@ div.messages {
      border-radius: 4px;
      border: 1px solid #000033;
      background: #008 url('images/lightbluetile.png');
+     font-weight: bold;
 }
-/*
-div.messages {
-     padding: 0 10px;
-     margin: 10px 0 20px 0;
-     -moz-border-radius: 4px;
-     -khtml-border-radius: 4px;
-     border-radius: 4px;
-     border: 1px solid #99f;
-     background: #008 url('images/lightbluetile.png');
-}
-*/
+
 div.messages span.error {
      color: #d00000;
 }
@@ -239,6 +230,13 @@ tr:nth-child(even) {
 
 tr:nth-child(odd) {
      background: #bbf url('images/tabletile_alt.png') !important;
+}
+
+tr:last-child {
+     background: #bbf url('images/tabletilelighter.png') !important;
+     font-weight: bold;
+     font-size: 8pt;
+     border: 1px solid #002 !important;
 }
 
 td {
@@ -463,7 +461,7 @@ select {
 
 textarea {
      padding: 5px;
-     margin: 0 5px 5px 0px;
+     margin: 15px 15px 5px 0px;
      background: #eef;
      color: #003;
      border-radius: 4px;
