Insert some <h3>'s into various config pages and minor meddling with the css.
Monotone-Parent: fd2c5c357ec8a51ade39e4f12f0ae5d7ef352d85
Monotone-Revision: 7615a2af56848dcb5b5bc530f59493b01b5a6377

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-17T20:57:18
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -328,7 +328,7 @@ h2 {
      font-size: 12pt;
      color: #001;
      letter-spacing: 0.05em;
-     background: #ddf url('images/tabletile.png');
+     background: #ddf url('images/lightbluetile.png');
      text-shadow: 0px 0px 1px rgba(0, 0, 64, 0.5);
      padding: 7px 10px;
      wordwrap: none;
