--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -170,7 +170,7 @@ div.configure {
 }
 
 div.messages {
-     padding: 0 10px;
+     padding: 10px;
      margin: 10px 0 20px 0;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
