Intitial proxy error tweaks, readme alt tag fixology. <b>(Blame the French!)</b>
Monotone-Parent: 4c475d2f20b45b76b9cbb569c112ce3424f5b68a
Monotone-Revision: 940d591debe327fb7e2cb06405ce1fd3fef1f49d

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-18T21:27:57
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -100,12 +100,19 @@ div.routersummary {
 }
 
 div.warning {
-     margin: 0em 1em 1em 224px;
-     padding: .5em 1em;
-     background: #ffefef;
-     border: medium solid #ffafaf;
+     margin: 0 20px 10px 224px;
+     padding: 20px 25px 20px 75px;
+     background: #fff;
+     border: 1px solid #d00;
      text-align: left;
      color: inherit;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     text-align: justify;
+     background-image:url("images/errortriangle.png");
+     background-position:15px center;
+     background-repeat:no-repeat;
 }
 
 div.main {
@@ -229,9 +236,9 @@ tr:nth-child(odd) {
 }
 
 tr:last-child {
-     background: #bbf url('images/lightbluetile.png') !important;
+     background: #004 url('images/lightbluetile.png') !important;
      font-weight: bold;
-     font-size: 8pt;
+     border: 1px solid #99f !important;
 }
 
 td {
@@ -470,3 +477,8 @@ textarea {
 }
 
 form {}
+
+.proxyfooter {
+     font-color: #f00;
+     font-size: 7pt;
+}    
